[gd_scene load_steps=4 format=3 uid="uid://c06qx2f7icqdb"]

[ext_resource type="Script" path="res://Inventory/InventorySlot/InventorySlot.gd" id="1_k8lro"]

[sub_resource type="Gradient" id="Gradient_b6uuc"]
colors = PackedColorArray(0.14902, 0.160784, 0.176471, 1, 0.14902, 0.160784, 0.176471, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lhgtq"]
gradient = SubResource("Gradient_b6uuc")

[node name="InventorySlot" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8lro")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = SubResource("GradientTexture2D_lhgtq")

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
